--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
      <div id="section">
         <div class="slide" id="Iron">
             <h1>Ii</h1>
-            <p>Iron</p>
+            <p>Icecream</p>
             <img src="https://img.freepik.com/free-vector/flat-ice-cream-collection_23-2148987753.jpg" alt="">
         </div>
      </div>
